<resources>
    <string name="app_name">Self Promo App</string>

    <string name="hint_contact_name">Contact Name</string>
    <string name="hint_contact_number">Contact Number</string>
    <string name="hint_my_name">Display Name</string>
    <string name="check_box_text_include_junior">Include Junior</string>
    <string name="check_box_text_immediate_start">Immediate Start</string>
    <string name="hint_available_from">Available from date</string>
    <string name="button_text_preview_button">PREVIEW MESSAGE</string>
    <string name="button_text_send_message">Send Message</string>
</resources>